--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,15 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
-	<string name="user_image">User Image</string>
+    <string name="meetup_name">Name</string>
+    <string name="meetup_desc">Description</string>
+     <string name="meetup_dest">Destination</string>
+    <string name="meetup_time">Time(hh:mm)</string>
+    <string name="meetup_contacts">Add People</string>
+    <string name="meetup_creation">Plan a Meet Up</string>
+    <string name="meetup_create">Done</string>
+    <string name="back">Back</string>
+    <string name="title_activity_meet">MeetActivity</string>
+    <string name="spinner_title">Invite to Meet</string>
+
 </resources>
